changed some comments

--- a/sleep_awake_detection.ipynb
+++ b/sleep_awake_detection.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T11:39:28.051329300Z",
+     "start_time": "2024-06-15T11:39:28.020846200Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -10,18 +17,18 @@
     "train_dir = os.path.join(base_dir, 'dataset/train')\n",
     "val_dir = os.path.join(base_dir, 'dataset/valid')\n",
     "test_dir = os.path.join(base_dir, 'dataset/test')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-15T11:39:28.051329300Z",
-     "start_time": "2024-06-15T11:39:28.020846200Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T11:39:34.293174400Z",
+     "start_time": "2024-06-15T11:39:28.039148900Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -41,12 +48,12 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "\n",
-    "# Define constants\n",
+    "# Defining constants\n",
     "img_size = (224, 224)\n",
     "batch_size = 32\n",
     "epochs = 20\n",
     "\n",
-    "# Load dataset without data augmentation, only rescaling\n",
+    "# Loading dataset using ImageDataGenerator function\n",
     "datagen = ImageDataGenerator(preprocessing_function=tf.keras.applications.mobilenet.preprocess_input)\n",
     "\n",
     "train_generator = datagen.flow_from_directory(\n",
@@ -70,18 +77,18 @@
     "    class_mode='binary',\n",
     "    shuffle=False\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-15T11:39:34.293174400Z",
-     "start_time": "2024-06-15T11:39:28.039148900Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T11:39:39.024762800Z",
+     "start_time": "2024-06-15T11:39:34.245291700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -124,20 +131,20 @@
     }
    ],
    "source": [
-    "# Load the MobileNet model with pre-trained weights, excluding the top layers\n",
+    "# Loading the MobileNet model with pre-trained weights, excluding the top layers\n",
     "base_model = MobileNet(weights='imagenet', include_top=False, input_shape=(img_size[0], img_size[1], 3))\n",
     "\n",
-    "# Unfreeze some of the last layers of the base model\n",
+    "# Unfreezing some of the last layers of the base model\n",
     "for layer in base_model.layers[-20:]:\n",
     "    layer.trainable = True\n",
     "\n",
-    "# Create input tensor\n",
+    "# Creating input tensor\n",
     "inputs = Input(shape=(img_size[0], img_size[1], 3))\n",
     "\n",
-    "# Pass inputs through the base model\n",
+    "# Passing inputs through the base model\n",
     "x = base_model(inputs, training=False)\n",
     "\n",
-    "# Add custom layers on top of the base model\n",
+    "# Adding custom layers on top of the base model\n",
     "x = GlobalAveragePooling2D()(x)\n",
     "x = Dense(512, activation='relu')(x)\n",
     "x = BatchNormalization()(x)\n",
@@ -147,43 +154,41 @@
     "x = Dropout(0.5)(x)\n",
     "outputs = Dense(1, activation='sigmoid')(x)\n",
     "\n",
-    "# Define the complete model\n",
     "model = Model(inputs, outputs)\n",
     "\n",
-    "# Compile the model with a lower learning rate\n",
+    "# Compiling the model with a lower learning rate\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5), loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Print the model summary\n",
     "model.summary()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-15T11:39:39.024762800Z",
-     "start_time": "2024-06-15T11:39:34.245291700Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "# Define callbacks\n",
-    "checkpoint_path = os.path.join(base_dir, 'Other_format/sleep_detection_model.h5')\n",
-    "checkpoint = ModelCheckpoint(checkpoint_path, monitor='val_accuracy', save_best_only=True, mode='max', verbose=1)"
-   ],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-15T11:41:22.892130400Z",
      "start_time": "2024-06-15T11:41:22.863643Z"
-    }
-   }
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Defining callbacks\n",
+    "checkpoint_path = os.path.join(base_dir, 'Other_format/sleep_detection_model.h5')\n",
+    "checkpoint = ModelCheckpoint(checkpoint_path, monitor='val_accuracy', save_best_only=True, mode='max', verbose=1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T11:47:47.340401400Z",
+     "start_time": "2024-06-15T11:41:26.487561Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,25 +278,25 @@
     }
    ],
    "source": [
-    "# Fine-tune the model\n",
+    "# Fine-tuning the model\n",
     "history_fine = model.fit(\n",
     "    train_generator,\n",
     "    epochs=epochs,\n",
     "    validation_data=validation_generator,\n",
     "    callbacks=[checkpoint]\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-15T11:47:47.340401400Z",
-     "start_time": "2024-06-15T11:41:26.487561Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-15T07:16:10.922680600Z",
+     "start_time": "2024-06-15T07:15:59.001756400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -310,18 +315,18 @@
     "\n",
     "# Initializing the MTCNN face detector\n",
     "detector = MTCNN()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-15T07:16:10.922680600Z",
-     "start_time": "2024-06-15T07:15:59.001756400Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T22:43:57.772018Z",
+     "start_time": "2024-06-14T22:43:57.767019500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Making a function for fetching roi coordinates, performing classification and displaying image having detection\n",
@@ -384,18 +389,18 @@
     "    cv2.putText(img, f'Sleepy faces: {sleepy_faces}', (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
     "\n",
     "    return img, sleepy_faces"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-14T22:43:57.772018Z",
-     "start_time": "2024-06-14T22:43:57.767019500Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T22:43:58.634912400Z",
+     "start_time": "2024-06-14T22:43:58.605126100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def process_image(image_path):\n",
@@ -426,18 +431,18 @@
     "    img_with_boxes_bgr = cv2.cvtColor(img_with_boxes, cv2.COLOR_RGB2BGR)\n",
     "\n",
     "    return img_with_boxes_bgr, f'Sleepy faces detected: {sleepy_faces}'"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-14T22:43:58.634912400Z",
-     "start_time": "2024-06-14T22:43:58.605126100Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T22:43:59.451538200Z",
+     "start_time": "2024-06-14T22:43:59.428539100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def process_video(video_path):\n",
@@ -479,14 +484,7 @@
     "    out.release()\n",
     "\n",
     "    return temp_file.name, f'The maximum number of sleepy faces detected in the entire video is: {max_sleepy_faces}'\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-14T22:43:59.451538200Z",
-     "start_time": "2024-06-14T22:43:59.428539100Z"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
