--- a/dataset_format_conversion.ipynb
+++ b/dataset_format_conversion.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "### YOLO to Standard format conversion script"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### YOLO to Standard format conversion script"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -65,48 +68,45 @@
     "\n",
     "            class_id, x_center, y_center, bbox_width, bbox_height = map(float, label_parts)\n",
     "\n",
-    "            # Convert to pixel coordinates\n",
+    "            # Converting to pixel coordinates\n",
     "            x1 = int((x_center - bbox_width / 2) * width)\n",
     "            y1 = int((y_center - bbox_height / 2) * height)\n",
     "            x2 = int((x_center + bbox_width / 2) * width)\n",
     "            y2 = int((y_center + bbox_height / 2) * height)\n",
     "\n",
-    "            # Ensure bounding box coordinates are within image boundaries\n",
+    "            # Ensuring bounding box coordinates are within image boundaries\n",
     "            x1 = max(0, x1)\n",
     "            y1 = max(0, y1)\n",
     "            x2 = min(width, x2)\n",
     "            y2 = min(height, y2)\n",
     "\n",
-    "            # Crop the face region\n",
+    "            # Cropping the face region\n",
     "            face_img = image[y1:y2, x1:x2]\n",
     "\n",
-    "            # Determine the label for saving the cropped face\n",
+    "            # Determining the label for saving the cropped face\n",
     "            if int(class_id) == 0:\n",
     "                face_label_dir = os.path.join(cropped_dir, 'awake')\n",
     "            else:\n",
     "                face_label_dir = os.path.join(cropped_dir, 'sleepy')\n",
     "\n",
-    "            # Save the cropped face image\n",
+    "            # Saving the cropped face image\n",
     "            face_img_path = os.path.join(face_label_dir, img_name)\n",
     "            cv2.imwrite(face_img_path, face_img)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Preprocess the datasets\n",
-    "preprocess_dataset(ORIGINAL_TRAIN_DIR, TRAIN_LABELS_DIR, CROPPED_TRAIN_DIR)\n",
-    "preprocess_dataset(ORIGINAL_VAL_DIR, VAL_LABELS_DIR, CROPPED_VAL_DIR)\n",
-    "preprocess_dataset(ORIGINAL_TEST_DIR, TEST_LABELS_DIR, CROPPED_TEST_DIR)\n"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Preprocessing the datasets\n",
+    "preprocess_dataset(ORIGINAL_TRAIN_DIR, TRAIN_LABELS_DIR, CROPPED_TRAIN_DIR)\n",
+    "preprocess_dataset(ORIGINAL_VAL_DIR, VAL_LABELS_DIR, CROPPED_VAL_DIR)\n",
+    "preprocess_dataset(ORIGINAL_TEST_DIR, TEST_LABELS_DIR, CROPPED_TEST_DIR)"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
