--- a/sleep_awake_detection.ipynb
+++ b/sleep_awake_detection.ipynb
@@ -497,10 +497,10 @@
     "\n",
     "        crop = img[roi_y:roi_y + roi_h, roi_x:roi_x + roi_w]\n",
     "\n",
-    "        # Preprocessing the cropped face image as required by your model\n",
-    "        crop_resized = cv2.resize(crop, (224, 224))  # Assuming your model expects 224x224 input\n",
-    "        crop_resized = crop_resized.astype('float32') / 255.0  # Normalize if required\n",
-    "        crop_resized = np.expand_dims(crop_resized, axis=0)  # Add batch dimension\n",
+    "        # Preprocessing the cropped face image\n",
+    "        crop_resized = cv2.resize(crop, (224, 224))\n",
+    "        crop_resized = crop_resized.astype('float32') / 255.0\n",
+    "        crop_resized = np.expand_dims(crop_resized, axis=0)\n",
     "\n",
     "        prediction = model.predict(crop_resized)\n",
     "        label = 'Awake' if prediction[0][0] < 0.5 else 'Sleepy'\n",
